--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "gulp-typings": "^2.0.4",
     "jquery": "^3.2.1",
     "knockout": "^3.4.2",
+    "knockout.validation": "^2.0.3",
     "requirejs": "^2.3.5",
     "run-sequence": "^2.2.0",
     "tsify": "^3.0.3",
