--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/es6-promise": "0.0.33",
     "@types/knockout": "^3.4.46",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
